--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/bootstrap": "^5.2.6",
     "@types/react-router-dom": "^5.3.3",
     "@types/sass": "^1.45.0",
+    "bootstrap": "^5.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
