--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/sass": "^1.45.0",
     "bootstrap": "^5.3.0",
     "react": "^18.2.0",
+    "react-audio-player": "^0.17.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-h5-audio-player": "^3.8.6",
